Auto naming of the Vertex Group doesn't work for Grease Pencil #92314

Closed
opened 2021-10-18 14:10:24 +02:00 by Dima · 7 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: Radeon RX 590 Series ATI Technologies Inc. 4.5.14742 Core Profile Context 21.8.2 27.20.22025.1006

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-17 17:10, hash: 452c78757f
Worked: (newest version of Blender that worked as expected)

Short description of error
If i bind Grease Pencil to the Armature without Vertex Groups (not Empty) and when i start to weight paint then Vertex Group is created with the name Group instead of the name same as the selected bone.
And the bone does not affect the vertices of the stroke until I manually rename the group according to the name of the bone. For polygonal meshes this feature works
This problem does not extend to Armature Deform With Automatic Weights.
pic.png
Exact steps for others to reproduce the error

  1. Select Grease Pencil object and Shift+ select Armature -> Ctrl+P Armature Deform (not With Empty Groups and not With Automatic Weights)
  2. Select Armature and Shift + select Grease Pencil object -> switch to Weight Paint Mode
  3. Weight painting
    [Based on the default startup or an attached .blend file (as simple as possible)]
    GP_VertGrp.blend
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: Radeon RX 590 Series ATI Technologies Inc. 4.5.14742 Core Profile Context 21.8.2 27.20.22025.1006 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-17 17:10, hash: `452c78757f` Worked: (newest version of Blender that worked as expected) **Short description of error** If i bind Grease Pencil to the Armature without Vertex Groups (not Empty) and when i start to weight paint then Vertex Group is created with the name Group instead of the name same as the selected bone. And the bone does not affect the vertices of the stroke until I manually rename the group according to the name of the bone. For polygonal meshes this feature works This problem does not extend to Armature Deform With Automatic Weights. ![pic.png](https://archive.blender.org/developer/F11246056/pic.png) **Exact steps for others to reproduce the error** 1. Select Grease Pencil object and Shift+ select Armature -> Ctrl+P Armature Deform (not With Empty Groups and not With Automatic Weights) 2. Select Armature and Shift + select Grease Pencil object -> switch to Weight Paint Mode 3. Weight painting [Based on the default startup or an attached .blend file (as simple as possible)] [GP_VertGrp.blend](https://archive.blender.org/developer/F11246060/GP_VertGrp.blend)
Author

Added subscriber: @scorpman

Added subscriber: @scorpman
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2021-10-18 15:48:20 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check.

Can confirm, will check.

This issue was referenced by 2491bc5ec7

This issue was referenced by 2491bc5ec773511468adaf7d9e6155bcc4360a99

This issue was referenced by 3a25501143

This issue was referenced by 3a2550114344d328d026f6f04b0fbfd7f7ef95c6
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92314
No description provided.